--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ h4 {
 }
 
 
+/* Main Page */
+
 /* Navbar */
 
 .navbar {
@@ -901,4 +903,123 @@ footer .social a:hover i {
         ;
         gap: 0;
     }
+}
+
+
+/* Catalog Page */
+
+.catalog {
+    min-height: 780px;
+    background-color: #ffffff;
+    padding-top: 155px;
+}
+
+.catalog_header {
+    font-size: 64px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 530;
+    color: var(--black);
+    text-align: center; 
+    display: grid;
+    grid-column: 1 / -1;
+    grid-template-columns: 1fr auto 1fr;
+    grid-gap: 20px;
+    align-items: center;
+}
+
+.catalog_header:before, .catalog_header:after {
+    display: block;
+    content: '';
+    height: 7px;
+    background: linear-gradient(to var(--direction, left), var(--black), transparent);
+}
+
+.catalog_header:after {
+    --direction: right;
+}
+
+.catalog_subheader {
+    font-size: 36px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 250;
+    color: var(--black);
+    text-align: center; 
+    margin-top: 16px;
+}
+
+.catalog_item {
+    min-height: 375px;
+    border: 1.5px solid #000000a7;
+    max-width: 2900px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 80px;
+}
+
+.catalog_item_content {
+    padding: 10px 35px;
+    width: 1000px;
+    /* width: 100%; */
+}
+
+.catalog_item_preheader {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.catalog_item_subheader {
+    font-size: 18px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 300;
+    color: #000000a7;
+    padding-top: 30px;
+}
+
+.catalog_item_preheader img {
+    padding-top: 19px;
+    width: 50px;
+}
+
+.catalog_item_header {
+    font-size: 31px;
+    font-family: "Montserrat", sans-serif;
+    color: var(--black);
+}
+
+.catalog_item_author {
+    font-size: 18px;
+    font-family: "Montserrat", sans-serif;
+    color: #000000a7;
+    padding-top: 10px;
+}
+
+.catalog_item_inf_row_1 {
+    font-size: 22px;
+    color: #000000a7;
+    font-family: "Montserrat", sans-serif;
+    padding-top: 30px;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+}
+
+/* .catalog_item_inf_row_1 .done_icon {
+    padding-left: 30px;
+} */
+
+.catalog_item_inf_row_2 {
+    font-size: 22px;
+    color: #000000a7;
+    font-family: "Montserrat", sans-serif;
+    padding-top: 30px;
+    gap: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.catalog_item_inf_row_2 .safed_grey_icon {
+    padding-left: 60px;
 }
