--- a/css/style.css
+++ b/css/style.css
@@ -729,6 +729,11 @@ details[open] .content {
     opacity: 1;
   }
   
+  .slider p {
+    font-size: 28px;
+    padding: 5px;
+  }
+
   .slide:hover {
     backdrop-filter: blur(10px);
   }
@@ -1663,7 +1668,7 @@ footer .social a:hover i {
 .map {
     width: 308px;
     height: 239px;  
-    margin-top: 20px;
+    margin-top: 100px;
     border-radius: 13px;
 }
 
@@ -1671,4 +1676,30 @@ footer .social a:hover i {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.other_recipes {
+    background-color: #fff;
+    padding-top: 85px;
+}
+
+.catalog_header {
+    margin-top: 79px;
+}
+
+.white_paper {
+    width: 1200px;
+    margin: 0 auto;
+    margin-top: 95px;
+    box-shadow: 0 4px 8px rgba(1, 3, 3, 0.4);
+    padding: 15px;
+}
+
+.paper_text {
+    font-size: 28px;
+    color: var(--black);
+    font-weight: 350;
+    text-align: center;
+    width: 945px;
+    margin: 0 auto;
 }
